@@ -1,5 +1,8 @@
 1.3-21
 
+* extract.lme.cov(2) modified to allow use with single level grouping 
+  factors (not really sure when this is useful)
+
 * bug in gam4objective called when using gam.method(outer="nlm") - never 
   used GCV.
 
